add logical validation for ontology value type